added all the backend functionality for the crud
